# openfoodfacts-rust

./: .editorconfig  .gitignore  Cargo.toml  README.md  TODO.md
.github/: CODEOWNERS  dependabot.yml  release-drafter.yml
.github/workflows/: draft.yml  linter.yml  release.yml  rust-clippy.yml  rust.yml  rustdoc.yml
src/: client.rs  lib.rs  locale.rs  output.rs  search.rs  types.rs
tests/: client.rs  v1.rs
