[package]
name = "openfoodfacts"
version = "0.1.0"
authors = ["jjdo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.2", features = ["blocking", "json"]}
# These are deps of reqwest. Why do I need to list them again here ?
url = "2.1.1"
serde = "1.0.115"
serde_urlencoded = "0.6.1"


