[package]
name = "openfoodfacts"
version = "0.1.0"
authors = ["jjdo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.12", features = ["blocking", "json"]}
# From reqwest
base64 = "0.13"
url = "2.2"
serde = "1.0"
serde_json = "1.0.73"
serde_urlencoded = "0.7"


